# dquant

./: .gitignore  BUGFIX_REPORT.md  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README_EN.md  config.example.json  dquant-cli.py  install.sh  pyproject.toml  quickstart.py  requirements-full.txt  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
configs/: config.local.yaml.example  config.yaml
docs/: API.md  live_trading.md
dquant/: __init__.py  calendar.py  config.py  constants.py  core.py  futures.py  logger.py  performance.py  portfolio_optimizer.py  realtime.py  risk.py  utils.py
examples/: backtest_examples.py  data_source_examples.py  data_sources_example.py  factors_example.py  full_example.py  risk_management_example.py  simple_backtest.py  strategy_examples.py
test/: 2026-04-07.jsonl
tests/: conftest.py  test_backtest_fixed.py  test_backtest_simple.py  test_basic.py  test_calendar.py  test_comprehensive_final.py  test_comprehensive_fixed.py  test_execution_semantics.py  test_extended_factors.py  test_factors.py  test_factors_comprehensive.py  test_factors_utils.py  test_live_edge_cases.py  test_live_trading.py  test_money_flow.py  test_performance.py  test_phase2_corporate.py  test_phase2_data.py  test_phase2_notify.py  test_phase2_retry.py  test_phase2_strategy.py  test_phase2_tracker.py  test_phase3_benchmark.py  test_phase3_divergence.py  test_phase3_graceful.py  test_phase3_price_update.py  test_phase3_reconnect.py  test_phase3_stoploss.py  test_phase3_web.py  test_phase4.py  test_price_limit.py  (+8 more)
(+60 files in other folders)
